# shift

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shift/: CMakeLists.txt
shift/application/: CMakeLists.txt
shift/application/doc/: application.md
shift/application/private/shift/application/: launcher.cpp
shift/application/public/shift/application/: launcher.h  launcher.hpp
shift/core/: CMakeLists.txt
shift/core/doc/: core.md
shift/core/private/shift/core/: algorithm.cpp  error_condition.cpp  stream_util.cpp  string_util.cpp
shift/core/public/shift/core/: abstract_factory.h  abstract_factory.hpp  algorithm.h  algorithm.hpp  at_exit_scope.h  at_exit_scope.hpp  bit_field.h  bit_field.hpp  boost_disable_warnings.h  boost_disable_warnings.hpp  boost_restore_warnings.h  boost_restore_warnings.hpp  byte_stream.h  byte_stream.hpp  contract.h  contract.hpp  core.h  core.hpp  error_condition.hpp  exception.h  exception.hpp  factory.h  factory.hpp  group_ptr.h  group_ptr.hpp  hash_table.h  hash_table.hpp  hex_dump.h  hex_dump.hpp  mpl.h  mpl.hpp  object_pool.h  object_pool.hpp  optional_ptr.h  optional_ptr.hpp  prototype_factory.h  prototype_factory.hpp  recursive_wrapper.h  recursive_wrapper.hpp  ring_buffer.h  (+13 more)
shift/core/test/: algorithm.cpp  at_exit_scope.cpp  group_ptr.cpp  hex_dump.cpp  mpl.cpp  optional_ptr.cpp  probe.h  probe.hpp  stream_util.cpp  string_util.cpp  types.cpp
shift/crypto/: CMakeLists.txt
shift/crypto/private/shift/crypto/: salsa20.cpp  sha256.cpp
shift/crypto/public/shift/crypto/: crypto.h  crypto.hpp  salsa20.h  salsa20.hpp  sha256.h  sha256.hpp
shift/crypto/test/: salsa20.cpp  sha256.cpp
shift/livedebug/: CMakeLists.txt
shift/livedebug/private/shift/livedebug/: debug_server.cpp  error_code.cpp  file_request_handler.cpp  file_request_handler.hpp  http_session.cpp  http_session.h  http_session.hpp  listener.cpp  listener.hpp  listener_impl.cpp  listener_impl.h  listener_impl.hpp  request_handler.cpp  session.cpp  uri.cpp  uri.hpp  websocket_session.cpp  websocket_session.h  websocket_session.hpp
shift/livedebug/public/shift/livedebug/: debug_server.h  debug_server.hpp  error_code.hpp  launcher.h  launcher.hpp  listener.h  listener.hpp  request_handler.h  request_handler.hpp  session.h  session.hpp
shift/livedebug/test/: http_server.cpp
shift/log/: CMakeLists.txt
shift/log/doc/: log.md
shift/log/private/shift/log/: log.cpp  log_console_sink.cpp  log_console_sink.h  log_console_sink.hpp  log_file_sink.cpp  log_file_sink.h  log_file_sink.hpp  log_server.cpp  log_server_impl.h  log_server_impl.hpp  log_sink.cpp
shift/log/public/shift/log/: log.h  log.hpp  log_channel_config.h  log_channel_config.hpp  log_server.h  log_server.hpp  log_sink.h  log_sink.hpp
shift/math/: CMakeLists.txt
shift/math/doc/: math.md
shift/math/private/shift/math/: dummy.cpp
shift/math/test/: half.cpp  intersection.cpp  interval.cpp  matrix.cpp  quaternion.cpp  utility.cpp  vector.cpp
shift/network/: CMakeLists.txt
shift/network/doc/: network.md
shift/network/test/: host.cpp  latency.cpp  socket.cpp
shift/parser.json/: CMakeLists.txt
shift/parser.json/doc/: parser.json.md
shift/parser.json/test/: parser.cpp
shift/parser.proto/: CMakeLists.txt
shift/parser.proto/doc/: built_in_types.md  language_reference.md  parser.proto.md
shift/parser.proto/test/: attribute.cpp  enum.cpp  main.cpp  namescope.cpp  parser.cpp  struct.cpp  test.cpp  test.h  test.hpp  using.cpp
shift/parser.xml/: CMakeLists.txt
shift/parser.xml/doc/: parser.xml.md
shift/parser.xml/test/: reader.cpp  schema.cpp
shift/platform/: CMakeLists.txt
shift/platform/doc/: platform.md
shift/platform/private/: assert.cpp
shift/proto/: CMakeLists.txt
shift/proto/doc/: proto.md
shift/protogen/: CMakeLists.txt
shift/protogen/doc/: protogen.md
shift/rc/: CMakeLists.txt
shift/rc/amd-tootle/: Timer.cpp  TootlePCH.h  bbox.h  cloud.h  color.h  error.cpp  feedback.cpp  feedback.h  fit.cpp  matrix.h  overdraw.cpp  soup.cpp  souptomesh.h  vector.h  window.h
shift/rc/doc/: rc.md
shift/rc/test/: actions.cpp  cache.cpp  convert.cpp  rules.cpp  squish.cpp  utility.cpp  utility.h  utility.hpp
shift/rc/tiff/: main.cpp
shift/render.vk/: CMakeLists.txt
shift/render.vk/doc/: render.vk.md
shift/render.vk/test/: window.cpp
shift/resource/: CMakeLists.txt
shift/resource_db/: CMakeLists.txt
shift/resource_db/doc/: resource_db.md
shift/scene/: CMakeLists.txt
shift/serialization/: CMakeLists.txt
shift/serialization/doc/: serialization.md
shift/serialization/test/: serialization.cpp
shift/serialization2/: CMakeLists.txt
shift/serialization2/test/: serialization.cpp
shift/service/: CMakeLists.txt
shift/service/doc/: service.md
shift/task/: CMakeLists.txt
shift/task/doc/: task.md
shift/task/test/: coro.cpp  future.cpp  main.cpp  promise.cpp  tasks.cpp
shift/tools.editor/: CMakeLists.txt
shift/tools.editor/editor/: editor_application.cpp  editor_application.h  editor_application.hpp  main.cpp  render_thread.cpp  render_thread.h  render_thread.hpp  schematics_controller.cpp  schematics_controller.h  schematics_controller.hpp  world_view.cpp  world_view.h  world_view.hpp
shift/tools.protogen/: CMakeLists.txt
shift/tools.protogen/doc/: tools.protogen.md
shift/tools.rc/: CMakeLists.txt
shift/tools.rc/amd-tootle/: Stripifier.cpp  Timer.h  TootlePCH.h  aligned_malloc.cpp  aligned_malloc.h  clustering.cpp  error.h  heap.h  mesh.h  option.h  overdraw.cpp  overdraw.h  quaternion.h  scalar.h  soup.cpp  soup.h  souptomesh.cpp  tootlelib.cpp  triorder.cpp  triorder.h  viewpoints.h
shift/tools.rc/amd-tootle/RayTracer/: TootleRaytracer.cpp  TootleRaytracer.h
shift/tools.rc/doc/: tools.rc.md
shift/tools.rc/shift/rc/: application.cpp  application.h  application.hpp  launcher.h  launcher.hpp  main.cpp  program_options.h  program_options.hpp
shift/tools.vk2cpp/: CMakeLists.txt
shift/tools.vk2cpp/doc/: tools.vk2cpp.md
shift/tools.vk2cpp/shift/vk2cpp/: application.cpp  application.h  application.hpp  main.cpp
(+1615 files in other folders)
