if (NOT NO_VULKAN)
  find_package(GLFW3)
  find_package(Vulkan)

  find_package(PNG)
  find_package(JPEG)
  find_package(TIFF)
  find_package(SPIRVCross)
  find_package(SPIRVTools)
  find_package(SPIRV)
  find_package(Glslang)
  find_package(ShaderC)
endif()

set(SHIFT_VERSION_MAJOR 2)
set(SHIFT_VERSION_MINOR 0)

add_subdirectory(platform)
add_subdirectory(core)
add_subdirectory(math)
add_subdirectory(log)
add_subdirectory(crypto)
add_subdirectory(task)
add_subdirectory(parser.json)
add_subdirectory(parser.xml)
add_subdirectory(serialization)
add_subdirectory(serialization2)
add_subdirectory(network)
add_subdirectory(service)
add_subdirectory(livedebug)
add_subdirectory(application)

add_subdirectory(proto)
add_subdirectory(protogen)

add_subdirectory(parser.proto)
add_subdirectory(tools.protogen)

if (NOT NO_VULKAN)
  add_subdirectory(scene)
  add_subdirectory(resource_db)
  add_subdirectory(render.vk)
  add_subdirectory(rc)
  add_subdirectory(tools.rc)
  add_subdirectory(tools.vk2cpp)
  if (NOT NO_QT5)
    add_subdirectory(tools.editor)
  endif()
endif()
